[gd_scene load_steps=10 format=2]

[ext_resource path="res://Prefabs/SoundEfx.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Place Holder/board.png" type="Texture" id=3]
[ext_resource path="res://Font/Toriko_font_64.tres" type="DynamicFont" id=4]
[ext_resource path="res://Font/Toriko_font_32.tres" type="DynamicFont" id=5]
[ext_resource path="res://Prefabs/BoardPosition.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=7]
[ext_resource path="res://Audio/Sounds/WrongClick.wav" type="AudioStream" id=8]
[ext_resource path="res://Scripts/AIManager.gd" type="Script" id=9]
[ext_resource path="res://Scripts/BoardManager.gd" type="Script" id=10]

[node name="Game" type="Node2D"]
script = ExtResource( 7 )
game_over_label_path = NodePath("GameOver/WinnerText")

[node name="GoFirst" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="GoFirst"]
margin_left = 410.0
margin_top = 262.0
margin_right = 590.0
margin_bottom = 412.0

[node name="Yes" type="Button" parent="GoFirst/VBoxContainer"]
margin_top = 21.0
margin_right = 180.0
margin_bottom = 51.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 5 )
text = "Yes"

[node name="No" type="Button" parent="GoFirst/VBoxContainer"]
margin_top = 98.0
margin_right = 180.0
margin_bottom = 128.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 5 )
text = "No"

[node name="QuestionText" type="Label" parent="GoFirst"]
margin_left = 353.0
margin_top = 183.0
margin_right = 653.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 4 )
text = "Go first?"
align = 1
valign = 1

[node name="Tabuleiro" type="Node2D" parent="."]
script = ExtResource( 10 )
game_manager_path = NodePath("..")

[node name="0-0" parent="Tabuleiro" instance=ExtResource( 6 )]
position = Vector2( 343, 172 )

[node name="0-1" parent="Tabuleiro" instance=ExtResource( 6 )]
position = Vector2( 485, 175 )

[node name="0-2" parent="Tabuleiro" instance=ExtResource( 6 )]
position = Vector2( 633, 174 )

[node name="1-0" parent="Tabuleiro" instance=ExtResource( 6 )]
position = Vector2( 346, 315 )

[node name="1-1" parent="Tabuleiro" instance=ExtResource( 6 )]
position = Vector2( 485, 315 )

[node name="1-2" parent="Tabuleiro" instance=ExtResource( 6 )]
position = Vector2( 624, 313 )

[node name="2-0" parent="Tabuleiro" instance=ExtResource( 6 )]
position = Vector2( 335, 460 )

[node name="2-1" parent="Tabuleiro" instance=ExtResource( 6 )]
position = Vector2( 472, 461 )

[node name="2-2" parent="Tabuleiro" instance=ExtResource( 6 )]
position = Vector2( 625, 465 )

[node name="Board" type="Sprite" parent="Tabuleiro"]
position = Vector2( 502, 344 )
scale = Vector2( 0.23, 0.23 )
texture = ExtResource( 3 )

[node name="SoundWrongClick" parent="Tabuleiro" instance=ExtResource( 2 )]
stream = ExtResource( 8 )

[node name="GameOver" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
margin_left = 409.0
margin_top = 261.0
margin_right = 589.0
margin_bottom = 411.0

[node name="PlayAgain" type="Button" parent="GameOver/VBoxContainer"]
margin_top = 21.0
margin_right = 180.0
margin_bottom = 51.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 5 )
text = "Play Again"

[node name="MainMenu" type="Button" parent="GameOver/VBoxContainer"]
margin_top = 98.0
margin_right = 180.0
margin_bottom = 128.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 5 )
text = "Main Menu"

[node name="WinnerText" type="Label" parent="GameOver"]
margin_left = 355.0
margin_top = 176.0
margin_right = 655.0
margin_bottom = 249.0
custom_fonts/font = ExtResource( 4 )
text = "Player # Win!"
align = 1
valign = 1

[node name="AIManager" type="Node" parent="."]
script = ExtResource( 9 )

[node name="SoundClick" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="GoFirst/VBoxContainer/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="GoFirst/VBoxContainer/No" to="." method="_on_No_pressed"]
[connection signal="on_node_clicked" from="Tabuleiro" to="." method="_on_Tabuleiro_on_node_clicked"]
[connection signal="pressed" from="GameOver/VBoxContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="GameOver/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
